--- a/repetition.html
+++ b/repetition.html
@@ -13,6 +13,12 @@
     <p>Добавим-ка еще<strong> <em>параграф</em></strong>.</p>
     <p><a href="http://comicsia.ru/collections/xkcd">Нажмите
             сюда</a>, чтобы почитать отличные комиксы.</p>
+            <script>
+                var name = "Ник"
+                console.log("Привет "+ name);
+                if(name.length>6){console.log("Ну и длиннющее же у вас имя!")}
+                else{console.log("Имя у вас не из длинных")}
+            </script>
 </body>
 
 </html>
