--- a/repetition.html
+++ b/repetition.html
@@ -13,12 +13,11 @@
     <p>Добавим-ка еще<strong> <em>параграф</em></strong>.</p>
     <p><a href="http://comicsia.ru/collections/xkcd">Нажмите
             сюда</a>, чтобы почитать отличные комиксы.</p>
-            <script>
-                var name = "Ник"
-                console.log("Привет "+ name);
-                if(name.length>6){console.log("Ну и длиннющее же у вас имя!")}
-                else{console.log("Имя у вас не из длинных")}
-            </script>
+    <script>
+        var animals = ["Конь", "Слон", "Пони", "Тигр", "лев"];
+for (var i =0; i < animals.lehgth; i++) {
+console.log ("в этом зоопарке есть " + animals[i] + "."); }
+    </script>
 </body>
 
 </html>
