--- a/4a3e0o1i.html
+++ b/4a3e0o1i.html
@@ -14,10 +14,16 @@
     <p><a href="http://comicsia.ru/collections/xkcd">Нажмите
             сюда</a>, чтобы почитать отличные комиксы.</p>
     <script>
-        var animals = ["Кот", "Рыба", "Лемур", "Комодский варан"];
-        for (i = 0; i < animals.length; i++) {
-            console.log(animals[i] = animals[i] + " - прекрасное животное!")
+        var input = "javascript is awesome";
+        var output = "";
+        for (i = 0; i < input.length; i++) {
+            if (input[i] === "a") { output += "4" }
+            else if (input[i] === "e") { output += "3" }
+            else if (input[i] === "i") { output += "1" }
+            else if (input[i] === "o") { output += "0" }
+            else { output += input[i] }
         }
+        console.log(output)
 
     </script>
 </body>
