--- a/jQuery.html
+++ b/jQuery.html
@@ -8,14 +8,15 @@
 </head>
 
 <body>
-    <h1 id="one">Поиграем в игру</h1>
+    <h1 id="one">Такие мои хобби</h1>
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
     <script>
 
-        var newText = prompt("Введите новый заголовок")
-        $("#one").text(newText);
-$("body").append("<p> Это новый параграф <p>");
-
+        for (var i = 0; i < 3; i++) {
+            var hobby = prompt("Назови свое хобби");
+            $("body").append("<h2>" + hobby + "<h2>")
+        }
+        $("h1").text("Этот текст скоро исчезнет").slide.Up(3000).slide.Down(2000)
     </script>
 </body>
 
