--- a/mousemove.html
+++ b/mousemove.html
@@ -10,10 +10,12 @@
     <h1 id="heading">Привет, мир!</h1>
     <script src="https://code.jquery.com/jquery-2.1.0.js"> </script>
     <script>
-        var clickHandler = function (event) {
-            console.log("Клик! " + event.pageX + " " + event.pageY);
-        };
-        $("h1").click(clickHandler);
+        $("html").mousemove(function (event){
+            $("#heading").offset({
+                left: event.pageX,
+                top: event.pageY
+            })
+        })
     </script>
 </body>
 
