--- a/cars2.html
+++ b/cars2.html
@@ -13,6 +13,7 @@
         var Car = function (x, y) {
             this.x = x;
             this.y = y;
+            this.draw()
         };
 
         Car.prototype.draw = function () {
@@ -26,17 +27,43 @@
             });
             $("body").append(this.carElement);
         };
-        Car.prototype.moveRight = function (){
-                this.x +=5;
-                this.carElement.css({
-                    left: this.x,
-                    top: this.y
-                })
-            }
+        Car.prototype.moveRight = function () {
+            this.x += 5;
+            this.carElement.css({
+                left: this.x,
+                top: this.y
+            })
+        }
+        Car.prototype.moveLeft = function () {
+            this.x -= 5;
+            this.carElement.css({
+                left: this.x,
+                top: this.y
+            })
+        }
+
+        Car.prototype.moveUp = function () {
+            this.y -= 5;
+            this.carElement.css({
+                left: this.x,
+                top: this.y
+            })
+        }
+        Car.prototype.moveDown = function () {
+            this.y += 5;
+            this.carElement.css({
+                left: this.x,
+                top: this.y
+            })
+        }
+
         var tesla = new Car(20, 20);
         var nissan = new Car(100, 200);
-        tesla.draw();
-        nissan.draw();
+        var buick = new Car(50, 400)
+
+       
+
+        setInterval(tesla.moveRight.bind(nissan), 50)
     </script>
 </body>
 
