--- a/canvas.html
+++ b/canvas.html
@@ -9,13 +9,20 @@
     <canvas id="canvas" width="500" height="500"></canvas>
 
     <script>
+        //рисую прямоугольниками
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
+        ctx.fillStyle = "Red"
         ctx.fillRect(100, 100, 50, 50);
+        ctx.fillStyle = "Blue"
         ctx.fillRect(120, 150, 10, 20);
+        ctx.fillStyle = "Orange"
         ctx.fillRect(100, 180, 50, 50);
+        ctx.fillStyle = "Yellow"
         ctx.fillRect(60, 170, 130, 10);
+        ctx.fillStyle = "Brown"
         ctx.fillRect(90, 180, 10, 100);
+        ctx.fillStyle = "Pink"
         ctx.fillRect(150, 180, 10, 100);
        
        
