--- a/canvas2.html
+++ b/canvas2.html
@@ -49,6 +49,23 @@
         ctx.lineTo(100, 100);
         ctx.fill();
 
+
+        ctx.lineWidth = 2;
+        ctx.strokeStyle = "Green";
+
+        ctx.beginPath();
+        ctx.arc(50,50,20,0,Math.PI/2, false);
+        ctx.stroke();
+
+        ctx.beginPath();
+        ctx.arc(100,50,20,0,Math.PI, false);
+        ctx.stroke();
+
+        ctx.beginPath();
+        ctx.arc(150,50,20,0, Math.PI *2, false);
+        ctx.stroke();
+        
+
     </script>
 </body>
 
