--- a/canvas3.html
+++ b/canvas3.html
@@ -12,18 +12,18 @@
 
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
-
+        //функция круга
         var circle = function (x, y, radius, fillCircle) {
             ctx.beginPath();
             ctx.arc(x, y, radius, 0, Math.PI * 2, false);
-            
+
             if (fillCircle === true) {
                 ctx.fill()
             } else {
                 ctx.stroke()
             }
         };
-
+        //разноцветные круги
         ctx.lineWidth = 4;
         ctx.strokeStyle = "Red";
         circle(100, 100, 10, false);
@@ -39,7 +39,7 @@
         circle(100, 100, 60, false)
 
 
-        
+
 
 
     </script>
