--- a/ball.html
+++ b/ball.html
@@ -9,14 +9,26 @@
 <body>
     <canvas id="canvas" width="500" height="300"></canvas>
     <script>
-        
+
+
 
         var Ball = function () {
+
             this.x = 100;
             this.y = 100;
-            this.xSpeed = -2;
-            this.ySpeed = 3;
+            this.xSpeed = Math.random() * 10 - 5;
+            this.ySpeed = Math.random() * 10 - 5;
+            var colors = ["Red", "Orange", "Yellow", "Green", "Blue", "Purple"];
+            this.color = pickRandomWord(colors);
         };
+
+        var pickRandomWord = function (words) {
+            return words[Math.floor(Math.random() * words.length)];
+        };
+
+
+
+
 
         var circle = function (x, y, radius, fillCircle) {
             ctx.beginPath();
@@ -28,6 +40,7 @@
             }
         };
         Ball.prototype.draw = function () {
+            ctx.fillStyle = this.color;
             circle(this.x, this.y, 3, true);
         };
 
@@ -48,18 +61,25 @@
 
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
-        
+
         var width = canvas.width;
         var height = canvas.height;
 
-        var ball = new Ball();
+        var balls = [];
+        for (var i = 0; i < 10; i++) {
+            balls[i] = new Ball()
+        }
+
+
+
 
         setInterval(function () {
             ctx.clearRect(0, 0, width, height);
-            ball.draw();
-            ball.move();
-            ball.checkCollision();
-
+            for (var i = 0; i < balls.length; i++) {
+                balls[i].draw();
+                balls[i].move();
+                balls[i].checkCollision();
+            }
             ctx.strokeRect(0, 0, width, height);
         }, 30);
 
