--- a/snaketest.html
+++ b/snaketest.html
@@ -36,21 +36,33 @@
         //функция счета
         var drawScore = function () {
 
-            ctx.fillStyle = "Black"
+            ctx.fillStyle = "Green"
             ctx.font = "20px Courier";
             ctx.textBaseline = "top";
             ctx.textAlign = "left";
-            ctx.fillText("Счет: "+ score, blockSize, blockSize);
+            ctx.fillText("Счет: " + score, blockSize, blockSize);
         };
-
-        var gameOver = function (){
-            clearInterval(intervalId);
+        //конец игры
+        var gameOver = function () {
+            // clearInterval(intervalId);
             ctx.font = "60px Courier";
             ctx.fillStyle = "Black";
             ctx.textAlign = "center";
             ctx.textBaseline = "middle";
-            ctx.fillText("Конец игры", width/2, height/2);
+            ctx.fillText("Конец игры", width / 2, height / 2);
         };
+
+        var si = setInterval(function () {
+            ctx.clearRect(0, 0, width, height)
+            score++;
+            drawScore()
+            drawBorder()
+        }, 1000)
+
+        
+
+
+
 
     </script>
 </body>
