--- a/snake.html
+++ b/snake.html
@@ -40,17 +40,91 @@
             ctx.font = "20px Courier";
             ctx.textBaseline = "top";
             ctx.textAlign = "left";
-            ctx.fillText("Счет: "+ score, blockSize, blockSize);
+            ctx.fillText("Счет: " + score, blockSize, blockSize);
         };
-
-        var gameOver = function (){
+        //конец игры
+        var gameOver = function () {
             clearInterval(intervalId);
             ctx.font = "60px Courier";
             ctx.fillStyle = "Black";
             ctx.textAlign = "center";
             ctx.textBaseline = "middle";
-            ctx.fillText("Конец игры", width/2, height/2);
+            ctx.fillText("Конец игры", width / 2, height / 2);
         };
+
+
+        var Block = function (col, row) {
+            this.col = col;
+            this.row = row;
+        }
+
+
+        Block.prototype.drawSquare = function (color) {
+            var x = this.col * blockSize;
+            var y = this.raw * blockSize;
+            ctx.fillStyle = color;
+            ctx.fillRect(x, y, blockSize, blockSize);
+        };
+
+        var sampleBlock = new Block(3, 4);
+        sampleBlock.drawSquare("LightBlue")
+
+
+        Block.prototype.drawCirle = function (color) {
+            var centerX = this.col * blockSize + blockSize / 2;
+            var centerY = this.row * blockSize + blockSize / 2;
+            ctx.fillStyle = color;
+            circle(centerX, centerY, blockSize / 2, true);
+        };
+
+        Block.prototype.equal = function (otherBlock) {
+            return this.col === oterBlock.col && this.row === otherBlock.row;
+        };
+
+        var Snake = function () {
+            this.segments = [
+                new Block(7, 5),
+                new Block(6, 5),
+                new Block(5, 5)
+            ];
+            this.direrction = "right";
+            this.nextDirection = "right";
+        };
+
+        Snake.prototype.draw = function () {
+            for (var i = 0; i < this.segments.length; i++) {
+                this.segments[i].drawSquare("Blue");
+            }
+        };
+
+        Snake.prototype.move = function () {
+            var head = this.segments[0];
+            var newHead;
+
+            this.direction = this.nextDirection;
+
+            if (this.direction === "right") {
+                newHead = new Block(head.col + 1, head.row);
+            } else if (this.direction === "down") {
+                new Head = new Block(head.col, head.row + 1);
+            } else if (this.direction === "left") {
+                newHead = new Block(head.col - 1, head.row);
+            } else if (this.direction === "up") {
+                newHead = new Block(head.col, head.row - 1);
+            }
+            if (this.chekCollision(newHead)) {
+                gameOver();
+                return;
+            }
+            this.segments.unshift(newHead);
+            if (newHead.equal(apple.position)) {
+                score++;
+                apple.move();
+            } else {
+                this.segments.pop();
+            }
+        };
+
 
     </script>
 </body>
