--- a/snake copy.html
+++ b/snake copy.html
@@ -7,44 +7,37 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="1200" height="700"></canvas>
+    <canvas id="canvas" width="400" height="400"></canvas>
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
     <script>
-        //настройка холста
+        // Настройка «холста»
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
-
-        //Получаем ширину и высоту канваса
+        // Получаем ширину и высоту элемента canvas
         var width = canvas.width;
         var height = canvas.height;
-
-        //разбиваем поле на квадратыб ширна и высота в ячейках
+        // Вычисляем ширину и высоту в ячейках
         var blockSize = 10;
         var widthInBlocks = width / blockSize;
         var heightInBlocks = height / blockSize;
-
-        // счет
+        // Устанавливаем счет 0
         var score = 0;
-
-        //рисуем рамку
-
+        // Рисуем рамку
         var drawBorder = function () {
             ctx.fillStyle = "Gray";
             ctx.fillRect(0, 0, width, blockSize);
             ctx.fillRect(0, height - blockSize, width, blockSize);
             ctx.fillRect(0, 0, blockSize, height);
             ctx.fillRect(width - blockSize, 0, blockSize, height);
-        }
-
-        //функция счета в верхнем левом углу
+        };
+        // Выводим счет игры в левом верхнем углу
         var drawScore = function () {
-            ctx.fillStyle = "Black"
             ctx.font = "20px Courier";
-            ctx.textBaseline = "top";
+            ctx.fillStyle = "Black";
             ctx.textAlign = "left";
+            ctx.textBaseline = "top";
             ctx.fillText("Счет: " + score, blockSize, blockSize);
         };
-
         // Отменяем действие setInterval и печатаем сообщение «Конец игры»
         var gameOver = function () {
             clearInterval(intervalId);
@@ -54,8 +47,7 @@
             ctx.textBaseline = "middle";
             ctx.fillText("Конец игры", width / 2, height / 2);
         };
-
-        //рисуем круг
+        // Рисуем окружность (используя функцию из главы 14)
         var circle = function (x, y, radius, fillCircle) {
             ctx.beginPath();
             ctx.arc(x, y, radius, 0, Math.PI * 2, false);
@@ -65,35 +57,31 @@
                 ctx.stroke();
             }
         };
-
-        //задаем конструктор Block
+        // Задаем конструктор Block (ячейка)
         var Block = function (col, row) {
             this.col = col;
             this.row = row;
         };
-
-        //рисуем квадрат в позиции ячейки
+        // Рисуем квадрат в позиции ячейки
         Block.prototype.drawSquare = function (color) {
             var x = this.col * blockSize;
             var y = this.row * blockSize;
             ctx.fillStyle = color;
             ctx.fillRect(x, y, blockSize, blockSize);
         };
-
-
-        //рисуем круг в позиции ячейки
+        // Рисуем круг в позиции ячейки
         Block.prototype.drawCircle = function (color) {
             var centerX = this.col * blockSize + blockSize / 2;
             var centerY = this.row * blockSize + blockSize / 2;
             ctx.fillStyle = color;
             circle(centerX, centerY, blockSize / 2, true);
         };
-
-        //проверяем, находится ли эта ячейка в той же позиции, что и ячейка otherBlock
-        Block.prototype.equal =function (otherBlock) {
+        // Проверяем, находится ли эта ячейка в той же позиции, что и ячейка
+        // otherBlock
+        Block.prototype.equal = function (otherBlock) {
             return this.col === otherBlock.col && this.row === otherBlock.row;
         };
-        //задаем конструктор Snake
+        // Задаем конструктор Snake (змейка)
         var Snake = function () {
             this.segments = [
                 new Block(7, 5),
@@ -103,19 +91,18 @@
             this.direction = "right";
             this.nextDirection = "right";
         };
-        //рисуем квадратик для каждого сегмента тела змейки
+        // Рисуем квадратик для каждого сегмента тела змейки
         Snake.prototype.draw = function () {
             for (var i = 0; i < this.segments.length; i++) {
                 this.segments[i].drawSquare("Blue");
             }
         };
-        //создаем новую голову и добавляем ее к началу змейки, чтобы передвинуть змейку в текущем направлении
+        // Создаем новую голову и добавляем ее к началу змейки,
+        // чтобы передвинуть змейку в текущем направлении
         Snake.prototype.move = function () {
             var head = this.segments[0];
             var newHead;
-
             this.direction = this.nextDirection;
-
             if (this.direction === "right") {
                 newHead = new Block(head.col + 1, head.row);
             } else if (this.direction === "down") {
@@ -137,15 +124,15 @@
                 this.segments.pop();
             }
         };
-        //проверяем, не столкнулась ли змейка со стеной или собственным телом
+        // Проверяем, не столкнулась ли змейка со стеной или собственным
+        // телом
         Snake.prototype.checkCollision = function (head) {
             var leftCollision = (head.col === 0);
             var topCollision = (head.row === 0);
             var rightCollision = (head.col === widthInBlocks - 1);
             var bottomCollision = (head.row === heightInBlocks - 1);
-
-            var wallCollision = leftCollision || topCollision || rightCollision || bottomCollision;
-
+            var wallCollision = leftCollision || topCollision ||
+                rightCollision || bottomCollision;
             var selfCollision = false;
             for (var i = 0; i < this.segments.length; i++) {
                 if (head.equal(this.segments[i])) {
@@ -154,10 +141,8 @@
             }
             return wallCollision || selfCollision;
         };
-
-
-
-        //задаем следующее направление движения змейки на основе нажатой клавиши
+        // Задаем следующее направление движения змейки на основе нажатой
+        // клавиши
         Snake.prototype.setDirection = function (newDirection) {
             if (this.direction === "up" && newDirection === "down") {
                 return;
@@ -170,7 +155,7 @@
             }
             this.nextDirection = newDirection;
         };
-        //задаем конструктор Apple
+        // Задаем конструктор Apple (яблоко)
         var Apple = function () {
             this.position = new Block(10, 10);
         };
@@ -178,21 +163,16 @@
         Apple.prototype.draw = function () {
             this.position.drawCircle("LimeGreen");
         };
-
-
-        //перемещаем яблоко в случайную позицию
+        // Перемещаем яблоко в случайную позицию
         Apple.prototype.move = function () {
             var randomCol = Math.floor(Math.random() * (widthInBlocks - 2)) + 1;
             var randomRow = Math.floor(Math.random() * (heightInBlocks - 2)) + 1;
             this.position = new Block(randomCol, randomRow);
         };
-
-        //создаем змейку и яблоко
-
+        // Создаем объект-змейку и объект-яблоко
         var snake = new Snake();
         var apple = new Apple();
-
-        //запускаем функцию анимации через setInterval
+        // Запускаем функцию анимации через setInterval
         var intervalId = setInterval(function () {
             ctx.clearRect(0, 0, width, height);
             drawScore();
@@ -200,8 +180,7 @@
             snake.draw();
             apple.draw();
             drawBorder();
-        }, 100)
-
+        }, 100);
         // Преобразуем коды клавиш в направления
         var directions = {
             37: "left",
@@ -216,7 +195,6 @@
                 snake.setDirection(newDirection);
             }
         });
-
     </script>
 </body>
 
